JS & HTML changed
Added Eventlistener to Hit and Stay
added logic to score

--- a/BlackJack/index.html
+++ b/BlackJack/index.html
@@ -1,9 +1,12 @@
+<!-- Created by Farah  -->
 <!doctype html>
 <html lang="en">
+
 <head>
     <meta charset="utf-8">
     <title>Black Jack</title>
     <link rel ="stylesheet" href = "css/bj.css">  
+
 </head>
 
 <body>
